create user from API
